--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://jhonykaesemodel.github.io/"  # End your URL with a `/` trailing slash.
+baseurl = "https://jhonykaesemodel.com/"  # End your URL with a `/` trailing slash.
 title = "Jhony Kaesemodel Pontes"
 copyright = "&copy; 2017 Jhony Kaesemodel Pontes"
 theme = "academic"
