--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "public"]
 	path = public
 	url = https://github.com/jhonykaesemodel/jhonykaesemodel.github.io.git
+[submodule "themes/academic"]
+	path = themes/academic
+	url = https://github.com/gcushen/hugo-academic
