--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,7 @@ defaultContentLanguageInSubdir = false
 
 [params]
   name = "Jhony Kaesemodel Pontes"
-  role = "PhD student"
+  role = "Engineer & Computer Visionist"
   organization = "Queensland University of Technology"
   organization_url = ""
   avatar = "portrait.jpg"
