--- a/config.toml
+++ b/config.toml
@@ -125,7 +125,7 @@ defaultContentLanguageInSubdir = false
   [[params.social]]
     icon = "envelope"
     icon_pack = "fa"
-    link = "jhonykaesemodel AT gmail.com"
+    #link = "mailto:jhonykaesemodel@gmail.com"
 
   [[params.social]]
     icon = "linkedin"
@@ -188,10 +188,10 @@ defaultContentLanguageInSubdir = false
 #  url = "#teaching"
 #  weight = 5
 
-[[menu.main]]
-  name = "Contact"
-  url = "#contact"
-  weight = 5
+#[[menu.main]]
+#  name = "Contact"
+#  url = "#contact"
+#  weight = 5
 
 # Taxonomies.
 [taxonomies]
