--- a/config.toml
+++ b/config.toml
@@ -23,7 +23,7 @@ defaultContentLanguageInSubdir = false
   role = "Engineer & Computer Visionist"
   organization = "Queensland University of Technology"
   organization_url = ""
-  avatar = "portrait/jhony.gif"
+  avatar = "portrait/portrait.gif"
   email = "jhonykaesemodel@gmail.com"
   address = ""
   office_hours = ""
