--- a/config.toml
+++ b/config.toml
@@ -23,8 +23,8 @@ defaultContentLanguageInSubdir = false
   role = "Engineer & Computer Visionist"
   organization = "Queensland University of Technology"
   organization_url = ""
-  #avatar = "portrait/jhony.gif"
-  email = "jhonykaesemodelATgmail.com"
+  avatar = "portrait/jhony.gif"
+  email = "jhonykaesemodel AT gmail.com"
   address = ""
   office_hours = ""
   phone = ""
